# parsing_data_DK

./: .gitignore  API.org  DF_city_center.ipynb  Dockerfile  README.md  README.org  REVERSE.org  city.ipynb  data_fusion.ipynb  dynamichooks.js  example.txt  find_distance_for_center.ipynb  main.csv  main.py  main.txt  pyproject.toml  requirements.txt  ssl_bypass.js  temp.py
parsing_and_data/: 12.csv  API.org  DB.py  README.md  all_def.py  get_uuid_region.py  join_data.ipynb  main.py  parser.ipynb  temp.py  year_of_construction.ipynb  year_of_construction.py
parsing_and_data/data/: 12.csv  data.csv  for_train.csv
parsing_and_data/paring_data/: all_def.py  db.py  frinja.js  ggg.code-profile  main.csv  pc2.csv  requirements.txt  year_of_construction.ipynb  year_of_construction.py
